name:          either
category:      Control, Monads
version:       5.0.2
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/either/
bug-reports:   http://github.com/ekmett/either/issues
copyright:     Copyright (C) 2008-2017 Edward A. Kmett
synopsis:      Combinators for working with sums
description:   Combinators for working with sums.
build-type:    Simple
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.8
             , GHC == 9.6.6
             , GHC == 9.8.4
             , GHC == 9.10.1
             , GHC == 9.12.1
extra-source-files:
  .gitignore
  .ghci
  .vim.custom
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: https://github.com/ekmett/either.git

library
  build-depends:
    base              >= 4.9     && < 5,
    bifunctors        >= 4       && < 6,
    mtl               >= 2.0     && < 2.4,
    profunctors       >= 4       && < 6,
    semigroupoids     >= 4       && < 7

  other-extensions: CPP Rank2Types
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Data.Either.Combinators
    Data.Either.Validation

test-suite tests
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends:
    base,
    either,
    tasty            >= 1.4  && < 1.6,
    tasty-quickcheck >= 0.10 && < 0.12,
    QuickCheck       >= 2.9  && < 2.16
  default-language: Haskell2010
